Issue #9651: Fix a crash when ctypes.create_string_buffer(0) was passed to some functions like file.write().